2012-04-12  James Robinson  <jamesr@chromium.org>

        [chromium] Move WebVideoFrame into Platform and remove WebCore::VideoFrameChromium wrapper API
        https://bugs.webkit.org/show_bug.cgi?id=83851

        Reviewed by Adam Barth.

        Move WebVideoFrame API into Platform.

        * Platform.gypi:
        * chromium/public/WebVideoFrame.h: Renamed from Source/WebCore/platform/graphics/chromium/VideoFrameChromium.h.
        (WebKit):
        (WebVideoFrame):
        (WebKit::WebVideoFrame::~WebVideoFrame):
        (WebKit::WebVideoFrame::format):
        (WebKit::WebVideoFrame::width):
        (WebKit::WebVideoFrame::height):
        (WebKit::WebVideoFrame::planes):
        (WebKit::WebVideoFrame::stride):
        (WebKit::WebVideoFrame::data):
        (WebKit::WebVideoFrame::textureId):
        (WebKit::WebVideoFrame::textureTarget):
        * chromium/src/WebVideoFrame.cpp: Renamed from Source/WebCore/platform/graphics/chromium/VideoFrameChromium.cpp.
        (WebKit):

2012-04-11  David Dorwin  <ddorwin@chromium.org>

        Add keySystem attribute to canPlayType() for Encrypted Media Extensions
        https://bugs.webkit.org/show_bug.cgi?id=82973

        Reviewed by Adam Barth.

        The new attribute is behind the ENABLE(ENCRYPTED_MEDIA) feature define.
        Implementation is based on v0.1 of the draft proposal at
        http://dvcs.w3.org/hg/html-media/raw-file/tip/encrypted-media/encrypted-media.html#extensions.

        * chromium/public/WebMimeRegistry.h:
        (WebKit::WebMimeRegistry::supportsMediaMIMEType):

2012-04-09  Dana Jansens  <danakj@chromium.org>

        [chromium] Viewport is not filled when out of texture memory on mac
        https://bugs.webkit.org/show_bug.cgi?id=83351

        Reviewed by Adrienne Walker.

        * chromium/public/WebLayerTreeView.h:
        (WebLayerTreeView):

2012-04-09  James Robinson  <jamesr@chromium.org>
