@@ -94,7 +94,6 @@
             'chromium/src/WebCString.cpp',
             'chromium/src/WebFloatQuad.cpp',
             'chromium/src/WebString.cpp',
-            'chromium/src/WebVideoFrame.cpp',
         ]
     }
 }
